<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.cruftex</groupId>
  <artifactId>java-memory-benchmark</artifactId>
  <packaging>jar</packaging>
  <version>0.1-SNAPSHOT</version>
  <name>Java memory benchmark</name>
  <description>
  </description>
  <url>http://github.org/cruftex/java-memory-benchmark</url>
  <inceptionYear>2015</inceptionYear>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/cruftex/java-memory-benchmark/issues</url>
  </issueManagement>

  <licenses>
    <license>
      <name>GNU General Public License (GPL)</name>
      <url>http://www.gnu.org/licenses/gpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Jens Wilke</name>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>1.6</source>
            <target>1.6</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-surefire-plugin</artifactId>
	<version>2.16</version>
	<configuration>
	  <!-- don't reuse a spawned JVM, so different implementation do not influence each other -->
	  <reuseForks>false</reuseForks>
	  <enableAssertions>false</enableAssertions>
	  <argLine>-verbose:gc -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseSerialGC</argLine>
	</configuration>
      </plugin>
    </plugins>
 
  </build>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

</project>
